fixes resume on mobile

--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -1,6 +1,6 @@
 .resumeContainer {
   max-width: 1500px;
-  min-width: 1020px;
+  min-width: 0;
   display: flex;
   flex-direction: row;
   align-items: stretch;
@@ -149,27 +149,4 @@
 
 .resumeMainContent a:hover {
   text-decoration: none;
-}
-
-@media screen and (max-width: 1001px) {
-  .resumeContainer {
-    display: none !important;
-  }
-
-  .resumeOops {
-    max-width: 1002px;
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    outline: 1px solid lightgray;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    flex-wrap: wrap;
-  }
-}
-
-@media screen and (min-width: 1001px) {
-  .resumeOops {
-    display: none !important;
-  }
 }
